👮🗻 Checkpoint ./src/App.css:22400771/510 ./.glitch-assets:22400771/1632

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
 }
 
 .hoverText {
+  font-family: "KingThings";
   color: "black";
 padding: "10px";
 background: "white";
@@ -32,3 +33,7 @@ background: "white";
   z-index: "50";
 }
 
+@font-face {
+  font-family: "KingthingsTrypewriter";
+  src: url('https://cdn.glitch.global/10b345a3-95cd-4ca0-8235-797211874091/KingthingsTrypewriter2.woff?v=1709238336492')
+}
