🐮🌹 Checkpoint ./src/ModelPoints.jsx:22400771/1 ./.glitch-assets:22400771/474 ./src/App.css:22400771/245 ./index.html:22400771/41 ./src/Scene.jsx:22400771/275

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,6 @@ background: "white";
 }
 
 @font-face {
-  font-family: "KingthingsTrypewriter";
-  src: url('https://cdn.glitch.global/10b345a3-95cd-4ca0-8235-797211874091/KingthingsTrypewriter2.woff?v=1709238336492')
+  font-family: "EDDrayton-Regular";
+  src: url('https://cdn.glitch.global/10b345a3-95cd-4ca0-8235-797211874091/EDDrayton-Regular.woff?v=1709239464894')
 }
