--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 body {
   /* Reseting the default here */
   margin: 0;
+  cursor:"zoom-in";
+}
+
+html {
+  cursor:"zoom-in";
 }
 
 #article_wrapper {
@@ -37,3 +42,5 @@ background: "white";
   font-family: "EDDrayton-Regular";
   src: url('https://cdn.glitch.global/10b345a3-95cd-4ca0-8235-797211874091/EDDrayton-Regular.woff?v=1709239464894')
 }
+
+
